Fixed scrollbar background color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,7 +34,7 @@ body {
   
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #030314;
 }
   
 /* Handle */
